# ice-cream-dataops

./: README.md  cdf.toml  config.prod.yaml  config.test.yaml  pyproject.toml
.github/workflows/: deploy.yaml
modules/bootcamp/ice_cream_api/: module.toml
modules/bootcamp/ice_cream_api/data_sets/: data_sets.DataSet.yaml
modules/bootcamp/ice_cream_api/functions/: schedules.Schedule.yaml
modules/bootcamp/ice_cream_api/transformations/: contextualize_ts_assets.Transformation.yaml  create_asset_hierarchy.schedule.yaml
modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkFlowTrigger.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
modules/bootcamp/use_cases/oee/: module.toml
modules/bootcamp/use_cases/oee/data_sets/: data_sets.DataSet.yaml
