[project]
name = "ice-cream-dataops"
version = "0.1.0"
description = "cdf bootcamp"
authors = [
    {name = "shrutika.fiske@cognite.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cognite-toolkit (>=0.6.97,<0.7.0)",
    "cognite-sdk (>=7.89.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
